# src/controllers/LanguagesController.ts
@@ -9,6 +9,7 @@ import { deleteAsset } from "./AssetsController";
 
 export interface ILanguageItem {
     id: string;
+    isDefault?: boolean;
     active: boolean;
     code: string;
     name: string;
@@ -48,6 +49,7 @@ interface LanguageResponse {
 
 interface LanguageCreateRequest {
     active?: boolean;
+    isDefault?: boolean;
     code: string;
     name: string;
     assets?: Array<string>;
@@ -60,6 +62,7 @@ interface LanguageCreateRequest {
 
 interface LanguageUpdateRequest {
     active?: boolean;
+    isDefault?: boolean;
     code?: string;
     name?: string;
     assets?: Array<string>;
@@ -170,6 +173,7 @@ export class LanguageController extends Controller {
         let savedItem: ILanguage;
         let ref: IRefItem;
         try {
+            request.isDefault = false;
             item = new LanguageModel(request);
         } catch (err) {
             this.setStatus(500);
@@ -189,7 +193,7 @@ export class LanguageController extends Controller {
             });
 
             mergeTranslation(translation, false);
-            
+
             const savedTranslationItem = await translation.save();
             await riseRefVersion(RefTypes.TRANSLATION);
 
@@ -223,22 +227,106 @@ export class LanguageController extends Controller {
         data: LANGUAGE_RESPONSE_TEMPLATE,
     })
     public async update(id: string, @Body() request: LanguageUpdateRequest): Promise<LanguageResponse> {
-        try {
-            const item = await LanguageModel.findById(id);
+        let item: ILanguage;
 
-            let languageCode: string;
+        let isDefault: boolean;
+
+        let languageCode: string;
+
+        try {
+            item = await LanguageModel.findById(id);
             for (const key in request) {
                 item[key] = request[key];
+
+                if (key === "isDefault") {
+                    isDefault = item[key];
+                    continue;
+                }
 
                 if (key === "code") {
                     languageCode = request[key];
                 }
-                
+
                 if (key === "extra") {
                     item.markModified(key);
                 }
             }
+        } catch (err) {
+            this.setStatus(500);
+            return {
+                error: [
+                    {
+                        code: 500,
+                        message: `Language found error. ${err}`,
+                    }
+                ]
+            };
+        }
 
+        try {
+            const langs: Array<ILanguage> = await LanguageModel.find({});
+
+            const promises = new Array<Promise<any>>();
+
+            if (isDefault) {
+                langs.forEach(lang => {
+                    if (lang.code !== languageCode) {
+                        if (!!lang.isDefault) {
+                            lang.isDefault = false;
+                            promises.push(new Promise(async (resolve, reject) => {
+                                try {
+                                    await lang.save();
+                                } catch (err) {
+                                    reject(err);
+                                }
+                                resolve();
+                            }));
+                        }
+                    }
+                });
+            } else {
+                let needSetupDefault = true;
+                let firstLang: ILanguage;
+
+                langs.forEach(lang => {
+                    if (!firstLang) {
+                        firstLang = lang;
+                    }
+
+                    if (lang.isDefault) {
+                        needSetupDefault = false;
+                    }
+                });
+
+                if (needSetupDefault && firstLang) {
+                    firstLang.isDefault = true;
+
+                    promises.push(new Promise(async (resolve, reject) => {
+                        try {
+                            await firstLang.save();
+                        } catch (err) {
+                            reject(err);
+                        }
+                        resolve();
+                    }));
+                }
+            }
+
+            await Promise.all(promises);
+
+        } catch (err) {
+            this.setStatus(500);
+            return {
+                error: [
+                    {
+                        code: 500,
+                        message: `Set default language error. ${err}`,
+                    }
+                ]
+            };
+        }
+
+        try {
             await item.save();
 
             if (!!languageCode) {
